<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyToDos</string>
    <string name="action_settings">Settings</string>
    <string name="login_instructions">Please log in with your username and password.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_new_account_link">Create a new account</string>
    <string name="login_button">Login</string>
    <string name="title_activity_create_new_account">Create New User Account</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_display_todos">My Todos</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="title_new_edit_task">
        <item>New ToDo</item>
        <item>Edit ToDo</item>
    </string-array>

    <string name="new_todo_hint">Subject</string>
    <string name="todo_due_date_hint">Due Date</string>
    <string name="todo_priority_hint">Select Priority</string>
    <string name="todo_description">Enter Description</string>
    <string name="save_task_button_text">Save ToDo</string>
    <string name="title_activity_new_edit_task">NewEditTaskActivity</string>
    <string name="title_activity_edit_new_task">EditNewTask</string>
    <string name="completedLabel">Completed</string>

</resources>
