<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateNewAccountActivity" >

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_create_new_account" />

    <EditText
        android:id="@+id/createNewUserFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcomeBack"
        android:layout_below="@+id/welcomeBack"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/createNewUserLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createNewUserFirstName"
        android:layout_below="@+id/createNewUserFirstName"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/createNewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createNewUserLastName"
        android:layout_below="@+id/createNewUserLastName"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/createNewUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createNewUserEmail"
        android:layout_below="@+id/createNewUserEmail"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createNewUserSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="22dp"
        android:layout_toLeftOf="@+id/createNewUserCancel"
        android:text="@string/save_button" />

    <Button
        android:id="@+id/createNewUserCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/welcomeBack"
        android:text="@string/cancel_button" />

</RelativeLayout>